# open-skills

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  build_and_validate.sh  docker-compose.yml  pyproject.toml
docs/: INTEGRATION_GUIDE.md  QUICKSTART.md
examples/: integration_example.py  library_mode_complete.py  openai_agents_sdk_example.py  prompt_injection_example.py  streaming_example.py  streaming_frontend_example.html
examples/hello-world/: README.md
examples/hello-world/scripts/: main.py
examples/text-summarizer/: README.md  SKILL.md
examples/text-summarizer/scripts/: main.py
examples/text-summarizer/tests/: sample_input.json
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  secrets.example.yaml  service.yaml
open_skills/: __init__.py  config.py  main.py
open_skills/api/: __init__.py  deps.py  router.py
open_skills/cli/: main.py
open_skills/core/: __init__.py  artifacts.py  crypto.py  exceptions.py  executor.py  library.py  manager.py  packing.py  rbac.py  router.py  streaming.py  telemetry.py
open_skills/core/adapters/: agent_tool_api.py  discovery.py  prompt_injection.py
open_skills/db/: __init__.py  base.py  models.py
open_skills/db/migrations/: env.py
open_skills/db/migrations/versions/: 001_initial_schema.py
open_skills/integrations/: fastapi_integration.py
open_skills/service/: __init__.py  main.py
open_skills/service/api/: router.py  schemas.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_packing.py
